@@ -33,6 +33,11 @@ else()
 endif()
 
 
+# if the installed project requested no architecture check, don't perform the check
+if("FALSE")
+  return()
+endif()
+
 # if the installed or the using project don't have CMAKE_SIZEOF_VOID_P set, ignore it:
 if("${CMAKE_SIZEOF_VOID_P}" STREQUAL "" OR "8" STREQUAL "")
    return()
